# RepoBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/templates/: qq.py
repobot/: instances.py
tests/: __init__.py  ariadne.py
